# app-ads-dash

./: .gitignore  .pre-commit-config.yaml  .testdash.py_OLD  LICENSE  README.md  app.py  dashapp.py  ids.py  pyproject.toml  run.py  testdash.py  utils.py  wsgi.py
.github/workflows/: actions-ec2.yml
config/: __init__.py
dbcon/: connections.py  queries.py
layout/: layout.py  tab_template.py
pages/: app_ads.py  home.py  internal_audit.py
plotter/: plotter.py
templates/: app_detail.html  app_rating.html  apps_home.html  category_detail.html  dashboard.html  index.html  navbar.html  search_no_query.html  search_results.html
