[project]
name = "app-ads-dash"
description = ""
version = "23.2.11.1"
authors = [{ name = "James O'Claire" }]

dependencies = [
    "dash",
    "dash_bootstrap_components",
    "dash_bootstrap_templates",
    "dash-ag-grid",
    "pandas",
    "sqlalchemy",
    "gunicorn",
    "sshtunnel",
    "Flask",
    "flask_caching",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.isort]
profile = 'black'

[tool.ruff]
select = ["E", "F", "B", "I", "N"]
target-version = 'py312'

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
