[project]
name = "app-ads-dash"
description = ""
version = "23.2.11.1"
authors = [{ name = "James O'Claire" }]

dependencies = [
    "dash",
    "dash_bootstrap_components",
    "dash_bootstrap_templates",
    "dash-ag-grid",
    "pandas",
    "sqlalchemy",
    "gunicorn",
    "sshtunnel",
    "Flask",
    "flask_caching",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff]
lint.select = [
    "A",   # flake8 builtins 
    "E",   # errors 
    "W",   # pycodestyle Warnings 
    "F",   # PyFlake 
    "B",   # flake8-bugbear rules 
    "I",   # import sort 
    "N",   # PEP8 naming rules 
    "UP",  # pyupgrade, warnings for common mistakes for new versions
    "PLW", # pyflake
    "PLC", # pyflake
    "PLE", # pyflake
    "PD",  # pandas-vet
    #"D", # pydocstyle, all funcs have docstring 
]

target-version = 'py312'

lint.ignore = [
    "E501",  #line-length violations
    "PD901", # avoid df: I prefer df for variable name
    "W291",  # Trailing whitespaces, triggered by raw SQL queries
]

lint.fixable = ["ALL"]


# Avoid trying to fix flake8-bugbear (`B`) violations.
lint.unfixable = ["B"]


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
